[tool.poetry]
name = "LeetCodeSolution"
version = "0.1.0"
description = ""
authors = ["nulladmin1 <shrey.deogade@protonmail.com>"]
readme = "README.md"

packages = [
    { include = "two_sum", from = "src" },
    { include = "merge_strings_alternatively", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
python = "^3.12"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
two_sum = "two_sum.main:main"
merge_strings_alternatively = "merge_strings_alternatively.main:main"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]